--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.wind.xposed.entry">
 
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
+
     <uses-sdk tools:overrideLibrary="de.robv.android.xposed" />
     <application
         android:allowBackup="true"
