--- a/core/build.gradle
+++ b/core/build.gradle
@@ -7,28 +7,15 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
-
-        flavorDimensions "default"
     }
     buildTypes {
         debug {
-            debuggable true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         release {
-            debuggable false
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
-    productFlavors{
-        sandhook {
-        }
-        whale {
         }
     }
 }
@@ -36,16 +23,10 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-//    sandhookImplementation 'com.swift.sandhook:hooklib:4.2.0'
-//    sandhookImplementation 'com.swift.sandhook:xposedcompat:4.2.0'
+//    implementation 'com.swift.sandhook:hooklib:4.2.0'
+//    implementation 'com.swift.sandhook:xposedcompat:4.2.0'
 
-    sandhookImplementation(name: 'hooklib', ext: 'aar')
-    sandhookImplementation(name: 'xposedcompat', ext: 'aar')
-    sandhookImplementation 'com.jakewharton.android.repackaged:dalvik-dx:9.0.0_r3'
-
-    implementation 'me.weishu:free_reflection:3.0.1'
-
-    // 也可以使用whale hook, 也是xposed api, 只是hook原理不同
-    // source code: https://github.com/WindySha/xposed-hook-based-on-whale
-    whaleImplementation 'com.wind.xposed:xposed-on-whale:0.1.3'
+    implementation(name: 'hooklib', ext: 'aar')
+    implementation(name: 'xposedcompat', ext: 'aar')
+    implementation 'com.jakewharton.android.repackaged:dalvik-dx:9.0.0_r3'
 }
