--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,8 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
-        
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:7.0.1'
+        classpath 'com.github.kezong:fat-aar:1.3.8'  // https://github.com/kezong/fat-aar-android
     }
 }
 
@@ -21,6 +19,7 @@ allprojects {
 
         flatDir {
             dirs '../core/libs'
+            dirs '../app/libs'
         }
     }
 }
