--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,51 +1,47 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.kezong.fat-aar'  // https://github.com/kezong/fat-aar-android
+
+apply from: '../publish.gradle'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 31
     buildToolsVersion "26.0.3"
 
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion 19
+        targetSdkVersion 31
 
-        flavorDimensions "default"
+
+        ndk {
+            abiFilters "armeabi-v7a", "arm64-v8a"
+        }
     }
     buildTypes {
         debug {
-            debuggable true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         release {
-            debuggable false
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
-    productFlavors{
-        sandhook {
-        }
-        whale {
         }
     }
 }
 
+fataar {
+    /**
+     * If transitive is true, local jar module and remote library's dependencies will be embed.
+     * If transitive is false, just embed first level dependency
+     * Local aar project does not support transitive, always embed first level
+     * Default value is false
+     * @since 1.3.0
+     */
+    transitive = true
+}
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-
-//    sandhookImplementation 'com.swift.sandhook:hooklib:4.2.0'
-//    sandhookImplementation 'com.swift.sandhook:xposedcompat:4.2.0'
-
-    sandhookImplementation(name: 'hooklib', ext: 'aar')
-    sandhookImplementation(name: 'xposedcompat', ext: 'aar')
-    sandhookImplementation 'com.jakewharton.android.repackaged:dalvik-dx:9.0.0_r3'
-
-    implementation 'me.weishu:free_reflection:3.0.1'
-
-    // 也可以使用whale hook, 也是xposed api, 只是hook原理不同
-    // source code: https://github.com/WindySha/xposed-hook-based-on-whale
-    whaleImplementation 'com.wind.xposed:xposed-on-whale:0.1.3'
+    embed(name: 'hooklib', ext: 'aar')
+    embed(name: 'xposedcompat', ext: 'aar')
+//    embed 'com.jakewharton.android.repackaged:dalvik-dx:9.0.0_r3'
 }
