--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,5 +1,10 @@
 apply plugin: 'com.android.library'
 
+
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+def talking_sdk_key = properties.getProperty('talking_data_sdk_key')
+
 android {
     compileSdkVersion 28
     buildToolsVersion "26.0.3"
@@ -7,6 +12,7 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 28
+        buildConfigField "String", "Talking_Sdk_Key", "${talking_sdk_key}"
     }
     buildTypes {
         debug {
@@ -28,5 +34,6 @@ dependencies {
 
     implementation(name: 'hooklib', ext: 'aar')
     implementation(name: 'xposedcompat', ext: 'aar')
+
     implementation 'com.jakewharton.android.repackaged:dalvik-dx:9.0.0_r3'
 }
